🔽 FAQ CHEVRON: Substitui setas de texto ▼ por ícone SVG chevron moderno e responsivo

--- a/index.html
+++ b/index.html
@@ -1153,7 +1153,11 @@
         }
 
         .faq-arrow {
+            width: 16px;
+            height: 16px;
             transition: transform 0.3s;
+            color: rgba(0,0,0,0.6);
+            flex-shrink: 0;
         }
 
         .faq-answer {
@@ -1566,7 +1570,9 @@
                 <div class="faq-item">
                     <div class="faq-question">
                         <span>¿Cuáles son los requisitos mínimos para obtener una oferta de crédito?</span>
-                        <span class="faq-arrow">▼</span>
+                        <svg class="faq-arrow" width="16" height="16" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <path d="M7 10L12 15L17 10" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+                        </svg>
                     </div>
                     <div class="faq-answer">
                         Para obtener una oferta de crédito necesitas tener ventas consistentes y mantener una buena reputación como vendedor.
@@ -1575,7 +1581,9 @@
                 <div class="faq-item">
                     <div class="faq-question">
                         <span>¿Puedo obtener más de un crédito a la vez?</span>
-                        <span class="faq-arrow">▼</span>
+                        <svg class="faq-arrow" width="16" height="16" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <path d="M7 10L12 15L17 10" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+                        </svg>
                     </div>
                     <div class="faq-answer">
                         Dependiendo de tu historial crediticio y ventas, puedes calificar para múltiples productos de crédito.
@@ -1584,7 +1592,9 @@
                 <div class="faq-item">
                     <div class="faq-question">
                         <span>¿Dónde recibo el dinero de mi crédito?</span>
-                        <span class="faq-arrow">▼</span>
+                        <svg class="faq-arrow" width="16" height="16" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <path d="M7 10L12 15L17 10" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+                        </svg>
                     </div>
                     <div class="faq-answer">
                         El dinero se deposita directamente en tu cuenta de Mercado Pago y está disponible para usar inmediatamente.
