🎨 FAQ CHEVRON COR: Define opacidade 55% (#000000) - tom discreto e elegante

--- a/index.html
+++ b/index.html
@@ -1157,6 +1157,7 @@
             height: 20px;
             transition: transform 0.3s;
             flex-shrink: 0;
+            opacity: 0.55;
         }
 
         .faq-answer {
