⚡ FADE-IN MAIS RAPIDO: threshold 30%→10% + rootMargin -100px - primeira seção anima no primeiro scroll

--- a/index.html
+++ b/index.html
@@ -1974,8 +1974,8 @@
                 }
             });
         }, {
-            threshold: 0.3, // Ativa quando 30% do elemento está visível
-            rootMargin: '0px 0px -50px 0px' // Margem para ativar um pouco antes
+            threshold: 0.1, // Ativa quando apenas 10% do elemento está visível
+            rootMargin: '0px 0px -100px 0px' // Ativa 100px antes de chegar na seção
         });
         
         // Observa todas as seções animadas
