--- a/index.html
+++ b/index.html
@@ -91,9 +91,10 @@
         }
 
         .nav-item.dropdown .chevron {
-            width: 12px;
-            height: 12px;
+            width: 16px;
+            height: 20px;
             opacity: 1;
+            filter: brightness(0); /* Força cor preta */
         }
 
         .nav-item.login {
