--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
         /* Header */
         .header {
-            background: white;
+            background: #ffe600;
             padding: 20px 0;
             position: fixed;
             width: 100%;
