📐 HEADER REORGANIZADO: Layout igual à imagem - Conta digital/negócio + Iniciar sessão + Abrir conta grátis + Ajuda

--- a/index.html
+++ b/index.html
@@ -1380,20 +1380,20 @@
                     </div>
                     <nav class="nav-menu">
                         <a href="#" class="nav-item dropdown">
-                            Para ti
+                            Conta digital
                             <img src="./assets/images/Chevron Down.svg" alt="" class="chevron">
                         </a>
                         <a href="#" class="nav-item dropdown">
-                            Para tu negocio
+                            Conta negócio
                             <img src="./assets/images/Chevron Down.svg" alt="" class="chevron">
                         </a>
                     </nav>
                 </div>
                 <div class="nav-right">
                     <nav class="nav-menu">
-                        <a href="#" class="nav-item">Ayuda</a>
-                        <a href="#" class="nav-item login">Iniciar sesión</a>
-                        <a href="#" class="nav-item signup">Simular crédito</a>
+                        <a href="#" class="nav-item">Iniciar sessão</a>
+                        <a href="#" class="nav-item signup">Abrir conta grátis</a>
+                        <a href="#" class="nav-item">Ajuda</a>
                     </nav>
                 </div>
             </div>
