--- a/index.html
+++ b/index.html
@@ -1295,12 +1295,18 @@
             width: 24px;
             height: 24px;
             display: block;
-            color: rgba(0,0,0,0.55);
-            transition: color 0.2s;
+            transition: opacity 0.2s;
         }
 
-        .social-links a:hover {
-            color: rgba(0,0,0,0.8);
+        .social-links a img {
+            width: 100%;
+            height: 100%;
+            opacity: 0.55;
+            transition: opacity 0.2s;
+        }
+
+        .social-links a:hover img {
+            opacity: 0.8;
         }
 
 
@@ -1376,7 +1382,7 @@
             <div class="header-content">
                 <div class="nav-left">
                     <div class="logo">
-                        <img src="./assets/images/Header-Logo.png" alt="Mercado Pago" />
+                        <img src="./assets/images/Header Logo.svg" alt="Mercado Pago" />
                     </div>
                     <nav class="nav-menu">
                         <a href="#" class="nav-item dropdown">
@@ -1629,7 +1635,7 @@
         <div class="container">
             <div class="footer-content">
                 <div class="logo">
-                    <img src="./assets/images/footer-logo.png" alt="Mercado Pago" />
+                    <img src="./assets/images/Header Logo.svg" alt="Mercado Pago" />
                 </div>
                 <div class="footer-columns">
                     <div class="footer-column">
@@ -1665,10 +1671,18 @@
             <div class="footer-bottom">
                 <p class="footer-copyright">Copyright © 2023 Mercado Pago Colombia Ltda. Carrera 17 Número 93 - 09 Piso 3, Bogotá, Colombia</p>
                 <div class="social-links">
-                    <a href="#" title="Facebook">📘</a>
-                    <a href="#" title="Twitter">🐦</a>
-                    <a href="#" title="LinkedIn">💼</a>
-                    <a href="#" title="YouTube">📺</a>
+                    <a href="#" title="Facebook">
+                        <img src="./assets/images/Facebook.svg" alt="Facebook">
+                    </a>
+                    <a href="#" title="Twitter">
+                        <img src="./assets/images/twitter.svg" alt="Twitter">
+                    </a>
+                    <a href="#" title="LinkedIn">
+                        <img src="./assets/images/Linkedin.svg" alt="LinkedIn">
+                    </a>
+                    <a href="#" title="YouTube">
+                        <img src="./assets/images/Youtube.svg" alt="YouTube">
+                    </a>
                 </div>
             </div>
         </div>
