--- a/index.html
+++ b/index.html
@@ -1235,10 +1235,14 @@
         }
 
         .footer-content {
-            display: grid;
-            grid-template-columns: auto 1fr;
-            gap: 56px;
+            display: flex;
+            justify-content: space-between;
+            align-items: flex-start;
             margin-bottom: 40px;
+        }
+
+        .footer .logo {
+            flex-shrink: 0;
         }
 
         .footer-columns {
@@ -1367,7 +1371,8 @@
             }
 
             .footer-content {
-                grid-template-columns: 1fr;
+                flex-direction: column;
+                gap: 40px;
             }
 
             .footer-columns {
