--- a/index.html
+++ b/index.html
@@ -1201,7 +1201,7 @@
         /* CTA Section */
         .cta-section {
             background: #ffe600;
-            padding: 64px 0;
+            padding: 0 0 64px 0;
             text-align: center;
         }
 
@@ -1249,6 +1249,47 @@
 
         .cta-secondary:hover {
             background: rgba(52, 131, 250, 0.25);
+        }
+
+        /* Back to top button */
+        .back-to-top-container {
+            display: flex;
+            justify-content: center;
+            padding: 40px 0 0 0;
+        }
+
+        .back-to-top {
+            background: rgba(255, 255, 255, 0.9);
+            border: none;
+            border-radius: 50%;
+            width: 80px;
+            height: 80px;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            cursor: pointer;
+            box-shadow: 0 4px 16px rgba(0, 0, 0, 0.1);
+            transition: all 0.3s ease;
+            position: relative;
+            top: -40px;
+        }
+
+        .back-to-top:hover {
+            background: white;
+            transform: translateY(-4px);
+            box-shadow: 0 8px 24px rgba(0, 0, 0, 0.15);
+        }
+
+        .back-to-top-icon {
+            width: 24px;
+            height: 24px;
+            transform: rotate(180deg);
+            filter: brightness(0) opacity(0.7);
+            transition: opacity 0.3s ease;
+        }
+
+        .back-to-top:hover .back-to-top-icon {
+            opacity: 1;
         }
 
         /* Footer */
@@ -1414,6 +1455,18 @@
                 gap: 16px;
                 text-align: center;
                 padding: 0 20px;
+            }
+
+            /* Back to top responsive */
+            .back-to-top {
+                width: 60px;
+                height: 60px;
+                top: -30px;
+            }
+
+            .back-to-top-icon {
+                width: 20px;
+                height: 20px;
             }
         }
     </style>
@@ -1664,6 +1717,13 @@
 
     <!-- CTA Section -->
     <section class="cta-section">
+        <!-- Back to top button -->
+        <div class="back-to-top-container">
+            <button class="back-to-top" onclick="window.scrollTo({top: 0, behavior: 'smooth'})">
+                <img src="./assets/images/Chevron Down.svg" alt="Voltar ao topo" class="back-to-top-icon">
+            </button>
+        </div>
+        
         <div class="container">
             <h2 class="cta-title">Lleva tu negocio al siguiente nivel</h2>
             <div class="cta-buttons">
