--- a/index.html
+++ b/index.html
@@ -1255,41 +1255,42 @@
         .back-to-top-container {
             display: flex;
             justify-content: center;
-            padding: 40px 0 0 0;
+            padding: 0;
+            position: relative;
+            top: -60px;
         }
 
         .back-to-top {
-            background: rgba(255, 255, 255, 0.9);
+            background: white;
             border: none;
-            border-radius: 50%;
-            width: 80px;
-            height: 80px;
+            border-radius: 50px 50px 0 0;
+            width: 160px;
+            height: 40px;
             display: flex;
             align-items: center;
             justify-content: center;
             cursor: pointer;
-            box-shadow: 0 4px 16px rgba(0, 0, 0, 0.1);
+            box-shadow: 0 -4px 16px rgba(0, 0, 0, 0.1);
             transition: all 0.3s ease;
             position: relative;
-            top: -40px;
         }
 
         .back-to-top:hover {
-            background: white;
-            transform: translateY(-4px);
-            box-shadow: 0 8px 24px rgba(0, 0, 0, 0.15);
+            background: #f8f8f8;
+            transform: translateY(-2px);
+            box-shadow: 0 -6px 20px rgba(0, 0, 0, 0.15);
         }
 
         .back-to-top-icon {
-            width: 24px;
-            height: 24px;
+            width: 16px;
+            height: 16px;
             transform: rotate(180deg);
-            filter: brightness(0) opacity(0.7);
+            filter: brightness(0) opacity(0.6);
             transition: opacity 0.3s ease;
         }
 
         .back-to-top:hover .back-to-top-icon {
-            opacity: 1;
+            opacity: 0.8;
         }
 
         /* Footer */
@@ -1458,15 +1459,18 @@
             }
 
             /* Back to top responsive */
+            .back-to-top-container {
+                top: -40px;
+            }
+
             .back-to-top {
-                width: 60px;
-                height: 60px;
-                top: -30px;
+                width: 120px;
+                height: 32px;
             }
 
             .back-to-top-icon {
-                width: 20px;
-                height: 20px;
+                width: 14px;
+                height: 14px;
             }
         }
     </style>
