--- a/index.html
+++ b/index.html
@@ -1257,11 +1257,12 @@
             justify-content: center;
             padding: 0;
             position: relative;
-            top: -60px;
+            top: 0;
+            margin-bottom: 0;
         }
 
         .back-to-top {
-            background: white;
+            background: #ffe600;
             border: none;
             border-radius: 50px 50px 0 0;
             width: 160px;
@@ -1270,15 +1271,14 @@
             align-items: center;
             justify-content: center;
             cursor: pointer;
-            box-shadow: 0 -4px 16px rgba(0, 0, 0, 0.1);
             transition: all 0.3s ease;
             position: relative;
+            margin-bottom: 0;
         }
 
         .back-to-top:hover {
-            background: #f8f8f8;
+            background: #f4d900;
             transform: translateY(-2px);
-            box-shadow: 0 -6px 20px rgba(0, 0, 0, 0.15);
         }
 
         .back-to-top-icon {
@@ -1460,7 +1460,7 @@
 
             /* Back to top responsive */
             .back-to-top-container {
-                top: -40px;
+                top: 0;
             }
 
             .back-to-top {
