--- a/index.html
+++ b/index.html
@@ -1257,8 +1257,8 @@
             justify-content: center;
             padding: 0;
             position: relative;
-            top: 0;
-            margin-bottom: 0;
+            top: -40px;
+            margin-bottom: -40px;
         }
 
         .back-to-top {
@@ -1460,7 +1460,8 @@
 
             /* Back to top responsive */
             .back-to-top-container {
-                top: 0;
+                top: -32px;
+                margin-bottom: -32px;
             }
 
             .back-to-top {
