📐 CENTRALIZA CONTEÚDO CTA: Adiciona padding-top para compensar aba e centralizar conteúdo da seção

--- a/index.html
+++ b/index.html
@@ -1201,7 +1201,7 @@
         /* CTA Section */
         .cta-section {
             background: #ffe600;
-            padding: 0 0 64px 0;
+            padding: 64px 0;
             text-align: center;
         }
 
@@ -1249,6 +1249,10 @@
 
         .cta-secondary:hover {
             background: rgba(52, 131, 250, 0.25);
+        }
+
+        .cta-content {
+            padding-top: 40px;
         }
 
         /* Back to top button */
@@ -1472,6 +1476,10 @@
             .back-to-top-icon {
                 width: 14px;
                 height: 14px;
+            }
+
+            .cta-content {
+                padding-top: 32px;
             }
         }
     </style>
@@ -1729,7 +1737,7 @@
             </button>
         </div>
         
-        <div class="container">
+        <div class="container cta-content">
             <h2 class="cta-title">Lleva tu negocio al siguiente nivel</h2>
             <div class="cta-buttons">
                 <a href="#" class="cta-primary">Abrir cuenta</a>
