--- a/index.html
+++ b/index.html
@@ -1252,7 +1252,7 @@
         }
 
         .cta-content {
-            padding-top: 40px;
+            padding-top: 0;
         }
 
         /* Back to top button */
@@ -1261,8 +1261,8 @@
             justify-content: center;
             padding: 0;
             position: relative;
-            top: -40px;
-            margin-bottom: -40px;
+            z-index: 1;
+            margin-bottom: 0;
         }
 
         .back-to-top {
@@ -1277,7 +1277,7 @@
             cursor: pointer;
             transition: all 0.3s ease;
             position: relative;
-            margin-bottom: 0;
+            margin-bottom: -1px;
         }
 
         .back-to-top:hover {
@@ -1464,8 +1464,7 @@
 
             /* Back to top responsive */
             .back-to-top-container {
-                top: -32px;
-                margin-bottom: -32px;
+                margin-bottom: 0;
             }
 
             .back-to-top {
@@ -1479,7 +1478,7 @@
             }
 
             .cta-content {
-                padding-top: 32px;
+                padding-top: 0;
             }
         }
     </style>
@@ -1728,15 +1727,15 @@
     </section>
 
 
+    <!-- Back to top button -->
+    <div class="back-to-top-container">
+        <button class="back-to-top" onclick="window.scrollTo({top: 0, behavior: 'smooth'})">
+            <img src="./assets/images/Chevron Down.svg" alt="Voltar ao topo" class="back-to-top-icon">
+        </button>
+    </div>
+
     <!-- CTA Section -->
     <section class="cta-section">
-        <!-- Back to top button -->
-        <div class="back-to-top-container">
-            <button class="back-to-top" onclick="window.scrollTo({top: 0, behavior: 'smooth'})">
-                <img src="./assets/images/Chevron Down.svg" alt="Voltar ao topo" class="back-to-top-icon">
-            </button>
-        </div>
-        
         <div class="container cta-content">
             <h2 class="cta-title">Lleva tu negocio al siguiente nivel</h2>
             <div class="cta-buttons">
