--- a/index.html
+++ b/index.html
@@ -1268,16 +1268,15 @@
         .back-to-top {
             background: #ffe600;
             border: none;
-            border-radius: 80px 80px 50px 50px;
+            border-radius: 50px 50px 0 0;
             width: 160px;
-            height: 60px;
+            height: 40px;
             display: flex;
             align-items: center;
             justify-content: center;
             cursor: pointer;
             position: relative;
             margin-bottom: -1px;
-            clip-path: ellipse(80px 60px at 50% 50%);
         }
 
 
@@ -1463,8 +1462,7 @@
 
             .back-to-top {
                 width: 120px;
-                height: 45px;
-                clip-path: ellipse(60px 45px at 50% 50%);
+                height: 32px;
             }
 
             .back-to-top-icon {
