🌊 ABA CURVA: Diminui largura (120px) + adiciona curvaturas negativas nos cantos (::before/::after)

--- a/index.html
+++ b/index.html
@@ -1269,7 +1269,7 @@
             background: #ffe600;
             border: none;
             border-radius: 50px 50px 0 0;
-            width: 160px;
+            width: 120px;
             height: 40px;
             display: flex;
             align-items: center;
@@ -1277,6 +1277,30 @@
             cursor: pointer;
             position: relative;
             margin-bottom: -1px;
+        }
+
+        .back-to-top::before {
+            content: '';
+            position: absolute;
+            bottom: 0;
+            left: -20px;
+            width: 20px;
+            height: 20px;
+            background: transparent;
+            border-radius: 0 0 20px 0;
+            box-shadow: 10px 10px 0 #ffe600;
+        }
+
+        .back-to-top::after {
+            content: '';
+            position: absolute;
+            bottom: 0;
+            right: -20px;
+            width: 20px;
+            height: 20px;
+            background: transparent;
+            border-radius: 0 0 0 20px;
+            box-shadow: -10px 10px 0 #ffe600;
         }
 
 
@@ -1461,8 +1485,24 @@
             }
 
             .back-to-top {
-                width: 120px;
+                width: 90px;
                 height: 32px;
+            }
+
+            .back-to-top::before {
+                left: -15px;
+                width: 15px;
+                height: 15px;
+                border-radius: 0 0 15px 0;
+                box-shadow: 7.5px 7.5px 0 #ffe600;
+            }
+
+            .back-to-top::after {
+                right: -15px;
+                width: 15px;
+                height: 15px;
+                border-radius: 0 0 0 15px;
+                box-shadow: -7.5px 7.5px 0 #ffe600;
             }
 
             .back-to-top-icon {
