↩️ REVERTE ABA: Volta ao formato anterior simples e funcional (160x40px, border-radius: 50px 50px 0 0)

--- a/index.html
+++ b/index.html
@@ -1268,7 +1268,8 @@
         .back-to-top {
             background: #ffe600;
             border: none;
-            width: 120px;
+            border-radius: 50px 50px 0 0;
+            width: 160px;
             height: 40px;
             display: flex;
             align-items: center;
@@ -1276,14 +1277,6 @@
             cursor: pointer;
             position: relative;
             margin-bottom: -1px;
-            clip-path: polygon(
-                20% 0%, 
-                80% 0%, 
-                100% 60%, 
-                95% 100%, 
-                5% 100%, 
-                0% 60%
-            );
         }
 
 
@@ -1468,16 +1461,8 @@
             }
 
             .back-to-top {
-                width: 90px;
+                width: 120px;
                 height: 32px;
-                clip-path: polygon(
-                    20% 0%, 
-                    80% 0%, 
-                    100% 60%, 
-                    95% 100%, 
-                    5% 100%, 
-                    0% 60%
-                );
             }
 
             .back-to-top-icon {
