--- a/index.html
+++ b/index.html
@@ -1282,10 +1282,20 @@
 
 
         .back-to-top-icon {
-            width: 16px;
-            height: 16px;
-            transform: rotate(180deg);
-            filter: brightness(0) opacity(0.6);
+            width: 24px;
+            height: 24px;
+        }
+
+        .visually-hidden {
+            position: absolute;
+            width: 1px;
+            height: 1px;
+            padding: 0;
+            margin: -1px;
+            overflow: hidden;
+            clip: rect(0, 0, 0, 0);
+            white-space: nowrap;
+            border: 0;
         }
 
 
@@ -1466,8 +1476,8 @@
             }
 
             .back-to-top-icon {
-                width: 14px;
-                height: 14px;
+                width: 20px;
+                height: 20px;
             }
 
             .cta-content {
@@ -1723,7 +1733,10 @@
     <!-- Back to top button -->
     <div class="back-to-top-container">
         <button class="back-to-top" onclick="window.scrollTo({top: 0, behavior: 'smooth'})">
-            <img src="./assets/images/Chevron Down.svg" alt="Voltar ao topo" class="back-to-top-icon">
+            <svg aria-hidden="true" width="24" height="24" viewBox="0 0 24 24" fill="rgba(0, 0, 0, 0.9)" class="back-to-top-icon">
+                <path d="M17.9941 16.0544L11.9903 10.0506L5.98034 16.0606L4.91968 15L11.9903 7.92932L19.0547 14.9937L17.9941 16.0544Z" fill="rgba(0, 0, 0, 0.9)"></path>
+            </svg>
+            <span class="visually-hidden">Ir para cima</span>
         </button>
     </div>
 
