--- a/index.html
+++ b/index.html
@@ -1259,25 +1259,25 @@
         .back-to-top-container {
             display: flex;
             justify-content: center;
-            padding: 32px 0 0 0;
+            padding: 0;
             position: relative;
             z-index: 1;
-            margin-bottom: -32px;
+            margin-bottom: 0;
         }
 
         .back-to-top {
-            background: white;
+            background: #ffe600;
             border: none;
-            border-radius: 50%;
-            width: 64px;
-            height: 64px;
+            width: 140px;
+            height: 50px;
             display: flex;
             align-items: center;
             justify-content: center;
             cursor: pointer;
             position: relative;
-            box-shadow: 0 4px 16px rgba(0, 0, 0, 0.1);
-            margin-bottom: 0;
+            margin-bottom: -1px;
+            border-radius: 70px 70px 25px 25px;
+            clip-path: ellipse(70px 40px at 50% 60%);
         }
 
 
@@ -1468,13 +1468,14 @@
 
             /* Back to top responsive */
             .back-to-top-container {
-                padding: 24px 0 0 0;
-                margin-bottom: -24px;
+                padding: 0;
+                margin-bottom: 0;
             }
 
             .back-to-top {
-                width: 48px;
-                height: 48px;
+                width: 100px;
+                height: 38px;
+                clip-path: ellipse(50px 30px at 50% 60%);
             }
 
             .back-to-top-icon {
