⬆️ VOLTA PUSHS VERTICAIS: Restaura animação original dos pushs (baixo→cima) em vez de horizontal

--- a/index.html
+++ b/index.html
@@ -752,7 +752,7 @@
             position: absolute;
             bottom: 310px;
             right: 30px;
-            transform: translateX(100%);
+            transform: translateY(100%);
             width: 240px;
             height: 68px;
             background: rgba(255, 255, 255, 0.12);
@@ -768,7 +768,7 @@
             position: absolute;
             bottom: 230px;
             right: 30px;
-            transform: translateX(100%);
+            transform: translateY(100%);
             width: 240px;
             height: 68px;
             background: rgba(255, 255, 255, 0.12);
@@ -803,16 +803,16 @@
 
         @keyframes pushSettle {
             0% {
-                transform: translateX(100%);
+                transform: translateY(100%);
             }
             70% {
-                transform: translateX(-3px);
+                transform: translateY(-3px);
             }
             90% {
-                transform: translateX(1px);
+                transform: translateY(1px);
             }
             100% {
-                transform: translateX(0);
+                transform: translateY(0);
             }
         }
 
